--- a/floral/html/floral.html
+++ b/floral/html/floral.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/floral/css/floral.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<<<<<<< HEAD
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@500;600;900&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/floral/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
     <link rel="stylesheet" href="/img_and_fonts/fonts/themify-icons/themify-icons.css">
@@ -19,22 +18,12 @@
     integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <title>Document</title>
-=======
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@600&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/floral/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
 </head>
 <body>
     <div class="main">
         <div class="container-fluid header-container">
             <div class="header row">
-<<<<<<< HEAD
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-5 flower-logo">
-=======
-                    <div class="col-xl-3 col-lg-3 col-md-3 flower-logo">
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-7 flower-logo">
                         <img src="/floral/img_and_fonts/image/flower_logo.png" alt="">
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-7 nav-bar">
@@ -46,24 +35,16 @@
                             <li> <div class="sign_in"><a href="">Sign In</a></div></li>
                         </ul>
                     </div>
-<<<<<<< HEAD
-                    <div class="col-xl-3 col-lg-2 col-md-2 col-sm-8 col-7 d-flex justify-content-end user-icon">
-=======
-                    <div class="col-xl-3 col-lg-2 col-md-2 user-icon">
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
+                    <div class="col-xl-3 col-lg-2 col-md-2 col-sm-8 col-5 d-flex justify-content-end user-icon">
                         <div class="icon-user">
                             <i class="fa-solid fa-user"></i>
                         </div>
                         <div class="icon-shopping">
                             <i class="fa-solid fa-bag-shopping"></i>
-<<<<<<< HEAD
                         </div> 
                         <div class="sidebar-btn js-open-sidebar">
                             <i class="fa-solid fa-bars"></i>
-                        </div>   
-=======
-                        </div>    
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
+                        </div>
                     </div>
             </div>
         </div>
@@ -78,17 +59,12 @@
                         <li>For all special occasions</li>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </div>
-<<<<<<< HEAD
                     <div class="flower-arr-choose">
                         <div class="shop-flower-arr-btn"><a href=""> Shop </a></div>
                         <div class="read-more-flower-arr-btn"> <a href=""> Read More </a></div>
                     </div>
                     <div class="decor-leaf-flower-bottom-left">
                         <img src="/floral/img_and_fonts/image/Leafs1.png" class="img-fluid" alt="">
-=======
-                    <div class="decor-leaf-flower-bottom-left">
-                        <img src="/floral/img_and_fonts/image/Leafs1.png" alt="">
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
                     </div>
                 </div>
                 <div class="col-right col-lg-6">
@@ -117,7 +93,6 @@
             </div>
         </div>
         <div class="our-top-product-content">
-<<<<<<< HEAD
             <div class="header-our-top-product">
                 <div class="leaf-product-top-left">
                     <img src="/floral/img_and_fonts/image/Leaf_product.png" alt="">
@@ -262,13 +237,55 @@
                 </div>
             </div>
             <div class="image-take-care-detail col-lg-6 col-md-6">
-                <div class="box-pink-take-care-detail"></div>
-                <img src="/floral/img_and_fonts/image/take_care_details.png" alt="">
-                <div class="box-brown-take-care-detail"></div>
+                <div class="container-image-take-care-detail">
+                    <img src="/floral/img_and_fonts/image/take_care_details.png" alt="">
+                </div>
+            </div>
+            <div class="leaf-right-bottom-take-care-detail">
+                <img src="/floral/img_and_fonts/image/leaf_right_bottom_take_care_detail.png" alt="">
             </div>
         </div>
-        <div class="intro-love-what-we-do"></div>
-        <div class="form-subcribe"></div>
+        <div class="row intro-love-what-we-do">
+            <div class="image-love-what-we-do col-lg-7 col-md-7">
+                <div class="box-pink-love-what-we-do-top"></div>
+                <img src="/floral/img_and_fonts/image/love_what_we_do.png" alt="">
+                <div class="box-brown-love-what-we-do-bottom"></div>
+            </div>
+            <div class="heading-love-what-we-do col-lg-5 col-md-5">
+                <div class="leaf-image-love-what-we-do">
+                    <img src="/floral/img_and_fonts/image/leaf_love_what_we_do.png" alt="">
+                </div>
+                <div class="container-text-love-what-we-do">
+                    <div class="text-contain-love-what-we-do">
+                        <h2>We love what we do</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                    </div>
+                    <div class="more-btn">
+                        <button class="read-more-btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="leaf-decor-bottom-love-what-we-do"><img src="/floral/img_and_fonts/image/leaf_best_flower_2.png" alt=""></div>
+        </div>
+        <div class="form-subcribe">
+            <div class="container-heading-form-subcribe">
+                <div class="heading-subcribe-form">
+                    <h2>Subcribe to our newsletter</h2>
+                </div>
+                <div class="paragraph-subscribe-form">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                </div>
+            </div>
+            <div class="fill-form">
+                <input id="Name" class="name-form" type="text" placeholder="Your Name">
+                <input id="mail" class="mail-form" type="email" placeholder="Mail">
+                <input id="message" class="message-form" type="text" placeholder="Messages">
+            </div>
+            <div class="send-message-btn">
+                <a href="">Send Message</a>
+            </div>
+        </div>
         <div class="footer"></div>
     </div>
     <div class="nav_overlay js-sidebar-overlay">
@@ -297,80 +314,6 @@
       </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-    $('.respon-slider').slick({
-  dots: false,
-  infinite: true,
-  speed: 200,
-  slidesToShow: 4,
-  slidesToScroll: 1,
-  arrows: true,
-        prevArrow:`<button type='button' class='slick-prev pull-left'><i class="fa-solid fa-arrow-left"></i></button>`,
-        nextArrow:`<button type='button' class='slick-next pull-right'><i class="fa-solid fa-arrow-right"></i></button>`,
-  responsive: [
-    {
-      breakpoint: 992,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        infinite: true,
-        dots: false
-      }
-    },
-    {
-        breakpoint: 784,
-        settings:{
-            slidesToShow: 2,
-            slidesToScroll: 1
-        }
-    },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
-  ]
-});
-</script>
     <script src="/js/floral.js"></script>
-=======
-
-        </div>
-        <div class="how-we-do-it-content">
-
-        </div>
-        <div class="special-sale-off">
-
-        </div>
-        <div class="intro-product-best-flower">
-
-        </div>
-        <div class="intro-take-care-details">
-
-        </div>
-        <div class="intro-love-what-we-do">
-
-        </div>
-        <div class="form-subcribe">
-
-        </div>
-        <div class="footer">
-
-        </div>
-    </div>
-    <script src="/js/number_run.js"></script>
->>>>>>> 3b0ba2629c3175e1b4ae06380f1aefd6ddd19de5
 </body>
 </html>
