Sửa thành scroll, padding header, font chữ navbar, căn giữa blog

--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -305,12 +305,12 @@
 
                 <div class="box_video_aboutus text-center">
 
-                    <video class="aboutus_pic" controls loop muted playsinline>
+                    <video class="aboutus_pic" poster="/assets/img/video_demo.png">
                         <source src="/assets/video/Embellishments.mp4" type="video/mp4">
                         <source src="/assets/video/Embellishments.webm" onerror="fallback(parentNode)">
                     </video>
 
-                    <!-- <i class="far fa-play-circle"></i> -->
+                    <i class="far fa-play-circle"></i>
                     <!-- <img class="aboutus_pic" src="/assets/img/video_demo.png" alt=""> -->
                 </div>
             </div>
