--- a/infor_page/html/infor_page.html
+++ b/infor_page/html/infor_page.html
@@ -5,17 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/infor_page/css/all.min.css">
-  <link rel="stylesheet" href="/infor_page/css/infor_page.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/181f9f94a9.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-  <title>Document</title>
+  <title>Infor_page</title>
+  <link rel="stylesheet" href="/infor_page/css/infor_page.css">
 </head>
 <body>
   <div class="main">
@@ -164,9 +161,9 @@
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <div class="title-desc-3-and-plus">
+                <div class="title-desc-3-and-plus dropdown-choose-1">
                   <div class="text-title-sec-3">
-                    <p class="text-dropdown">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                    <a class="text-dropdown">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</a>
                   </div>
                   <div class="button-dropdown">
                     <button class="btn-1-plus btn-dropdown">
@@ -183,9 +180,9 @@
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <div class="title-desc-3-and-plus">
+                <div class="title-desc-3-and-plus dropdown-choose-2">
                   <div class="text-title-sec-3">
-                    <p class="text-dropdown-2">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                    <a class="text-dropdown-2">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</a>
                   </div>
                   <div class="button-dropdown">
                     <button class="btn-2-plus btn-dropdown">
@@ -202,9 +199,9 @@
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <div class="title-desc-3-and-plus">
+                <div class="title-desc-3-and-plus dropdown-choose-3">
                   <div class="text-title-sec-3">
-                    <p class="text-dropdown-3">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                    <a class="text-dropdown-3">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</a>
                   </div>
                   <div class="button-dropdown">
                     <button class="btn-3-plus btn-dropdown">
@@ -221,9 +218,9 @@
                 <img class="line-space" src="/infor_page/img_and_fonts/image/Rectangle.png" alt="">
               </div>
               <div class="container-content-col-left-sec-3">
-                <div class="title-desc-3-and-plus">
+                <div class="title-desc-3-and-plus dropdown-choose-4">
                   <div class="text-title-sec-3">
-                    <p class="text-dropdown-4">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</p>
+                    <a class="text-dropdown-4">Lorem ipsum dolor, sit amet consectetur adipi sicing elit, sed do ei usmod</a>
                   </div>
                   <div class="button-dropdown">
                     <button class="btn-4-plus btn-dropdown">
@@ -250,35 +247,9 @@
       </div>
     </div>
   </div>
-  <script src="/js/infor_page.js"></script>
-  <script>
-    var txt_btn = 0, txt_btn_2 = 0, txt_btn_3 = 0, txt_btn_4 = 0;
-    $( '.text-dropdown' ).click(function() {
-      $( '.paragraph-one').toggle(txt_btn++ % 2 === 0);
-    });
-    $( '.text-dropdown-2' ).click(function() {
-      $( '.paragraph-two').toggle(txt_btn_2++ % 2 === 0);
-    });
-    $( '.text-dropdown-3' ).click(function() {
-      $( '.paragraph-three').toggle(txt_btn_3++ % 2 === 0);
-    });
-    $( '.text-dropdown-4' ).click(function() {
-      $( '.paragraph-four').toggle(txt_btn_4++ % 2 === 0);
-    });
-
-    var flip = 0, flip_2 = 0, flip_3 = 0, flip_4 = 0;
-    $( '.btn-1-plus' ).click(function() {
-      $( '.paragraph-one').toggle(flip++ % 2 === 0);
-    });
-    $( '.btn-2-plus' ).click(function() {
-      $( '.paragraph-two').toggle(flip_2++ % 2 === 0);
-    });
-    $( '.btn-3-plus' ).click(function() {
-      $( '.paragraph-three').toggle(flip_3++ % 2 === 0);
-    });
-    $( '.btn-4-plus' ).click(function() {
-      $( '.paragraph-four').toggle(flip_4++ % 2 === 0);
-    });
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/181f9f94a9.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <script src="/infor_page/js/infor_page.js"></script>
 </body>
 </html>
