--- a/italy_food_page/html/italy_food.html
+++ b/italy_food_page/html/italy_food.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/italy_food_style.css" />
+    <title>Italy_food_page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,6 +31,7 @@
       rel="stylesheet"
       href="/img_and_fonts/fonts/themify-icons/themify-icons.css"
     />
+    <link rel="stylesheet" href="/italy_food_page/css/italy_food_style.css" />
   </head>
 
   <body>
@@ -40,7 +40,7 @@
         <div class="top-nav">
           <div class="logo">
             <a href="">
-              <img src="/img_and_fonts/image/food_4_you.png" alt="" />
+              <img src="/italy_food_page/img_and_fonts/image/food_4_you.png" alt="" />
             </a>
           </div>
           <div class="group-right">
@@ -50,7 +50,7 @@
             </div>
             <div class="iphone-logo">
               <a href="">
-                <img src="/img_and_fonts/image/iPhone.png" alt="" />
+                <img src="/italy_food_page/img_and_fonts/image/iPhone.png" alt="" />
               </a>
             </div>
             <div class="nav_bars-btn js-open-sidebar">
@@ -77,7 +77,7 @@
         <div class="banner-color">
           <div class="col-left">
             <div class="group-item-1">
-              <img src="/img_and_fonts/image/Leaf1.png" alt="" />
+              <img src="/italy_food_page/img_and_fonts/image/Leaf1.png" alt="" />
               <h2>Are You Hungry?</h2>
             </div>
 
@@ -101,21 +101,21 @@
             <a href="">
               <img
                 class="spaghetti"
-                src="/img_and_fonts/image/dishes_spaghetti.png"
+                src="/italy_food_page/img_and_fonts/image/dishes_spaghetti.png"
                 alt=""
               />
             </a>
-            <img class="leaf2" src="/img_and_fonts/image/leaf2.png" alt="" />
+            <img class="leaf2" src="/italy_food_page/img_and_fonts/image/leaf2.png" alt="" />
             <img
               class="tomato"
-              src="/img_and_fonts/image/Tomato1.png"
+              src="/italy_food_page/img_and_fonts/image/Tomato1.png"
               alt=""
             />
           </div>
           <div class="noodle-crop-upper">
             <img
               class="noodle-crop"
-              src="/img_and_fonts/image/Spaghetti2_crop_upper.png"
+              src="/italy_food_page/img_and_fonts/image/Spaghetti2_crop_upper.png"
               alt=""
             />
           </div>
@@ -125,7 +125,7 @@
         <div class="noodle-crop-under">
           <img
             class="noodle-crop-2"
-            src="/img_and_fonts/image/Spaghetti2_crop_under.png"
+            src="/italy_food_page/img_and_fonts/image/Spaghetti2_crop_under.png"
             alt=""
           />
         </div>
@@ -147,7 +147,7 @@
               <a href="">
                 <img
                   class="noodle-choose-enjoy"
-                  src="/img_and_fonts/image/noodle_choose_enjoy.png"
+                  src="/italy_food_page/img_and_fonts/image/noodle_choose_enjoy.png"
                   alt=""
                 />
               </a>
@@ -164,7 +164,7 @@
               <a href="">
                 <img
                   class="bread-choose-enjoy"
-                  src="/img_and_fonts/image/Bread.png"
+                  src="/italy_food_page/img_and_fonts/image/Bread.png"
                   alt=""
                 />
               </a>
@@ -181,7 +181,7 @@
               <a href="">
                 <img
                   class="vegetable-choose-enjoy"
-                  src="/img_and_fonts/image/vegetable_choose_enjoy.png"
+                  src="/italy_food_page/img_and_fonts/image/vegetable_choose_enjoy.png"
                   alt=""
                 />
               </a>
@@ -216,25 +216,25 @@
             <div class="swiper-slide">
               <div class="test">
                 <div class="set-overlay"></div>
-                <img src="/img_and_fonts/image/pizza_slider_1.jpg" alt="" />
+                <img src="/italy_food_page/img_and_fonts/image/pizza_slider_1.jpg" alt="" />
               </div>
             </div>
             <div class="swiper-slide">
               <div class="test">
                 <div class="set-overlay"></div>
-                <img src="/img_and_fonts/image/noodle_slider.jpg" alt="" />
+                <img src="/italy_food_page/img_and_fonts/image/noodle_slider.jpg" alt="" />
               </div>
             </div>
             <div class="swiper-slide">
               <div class="test">
                 <div class="set-overlay"></div>
-                <img src="/img_and_fonts/image/pizza_slider_2.jpg" alt="" />
+                <img src="/italy_food_page/img_and_fonts/image/pizza_slider_2.jpg" alt="" />
               </div>
             </div>
             <div class="swiper-slide">
               <div class="test">
                 <div class="set-overlay"></div>
-                <img src="/img_and_fonts/image/pizza_slider_3.jpg" alt="" />
+                <img src="/italy_food_page/img_and_fonts/image/pizza_slider_3.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -250,19 +250,19 @@
             <h2 class="title-more-content word_one">Most</h2>
             <h2 class="title-more-content word_two">Popular</h2>
             <h2 class="title-more-content word_three">Pasta</h2>
-            <img src="/img_and_fonts/image/Image31.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/Image31.png" alt="" />
           </div>
           <div class="group-try-it-right">
             <div class="try-it-two">
               <h3>Try It Today</h3>
               <h2 class="title-more-content word_one">More Fun</h2>
               <h2 class="title-more-content word_two">More Taste</h2>
-              <img src="/img_and_fonts/image/Image41.png" alt="" />
+              <img src="/italy_food_page/img_and_fonts/image/Image41.png" alt="" />
             </div>
             <div class="try-it-three">
               <h3>Try It Today</h3>
               <h2 class="title-more-content word_one">Fresh & Chili</h2>
-              <img src="/img_and_fonts/image/Image51.png" alt="" />
+              <img src="/italy_food_page/img_and_fonts/image/Image51.png" alt="" />
             </div>
           </div>
         </div>
@@ -286,7 +286,7 @@
       <div id="footer">
         <div class="footer-group-one">
           <div class="logo-footer">
-            <img src="/img_and_fonts/image/food_4_you_footer.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/food_4_you_footer.png" alt="" />
           </div>
         </div>
         <div class="footer-group-two">
@@ -303,7 +303,7 @@
           <div class="footer-infor">
             <div class="footer-infor-group-one">
               <img
-                src="/img_and_fonts/image/Location_Icon.png"
+                src="/italy_food_page/img_and_fonts/image/Location_Icon.png"
                 class="location"
                 alt=""
               />
@@ -311,7 +311,7 @@
             </div>
             <div class="footer-infor-group-two">
               <img
-                src="/img_and_fonts/image/Email_Icon.png"
+                src="/italy_food_page/img_and_fonts/image/Email_Icon.png"
                 class="email"
                 alt=""
               />
@@ -324,10 +324,10 @@
             <h2>@Company Name 2020. All rights reserved.</h2>
           </div>
           <div class="footer-social_media">
-            <img src="/img_and_fonts/image/Instagram.png" alt="" />
-            <img src="/img_and_fonts/image/Facebook.png" alt="" />
-            <img src="/img_and_fonts/image/Twitter.png" alt="" />
-            <img src="/img_and_fonts/image/WhatsApp.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/Instagram.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/Facebook.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/Twitter.png" alt="" />
+            <img src="/italy_food_page/img_and_fonts/image/WhatsApp.png" alt="" />
           </div>
         </div>
       </div>
