--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Floral_page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Montserrat+Alternates:wght@500;600;900&family=Montserrat:wght@800&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/floral/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="/img_and_fonts/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/floral_page/img_and_fonts/font/fontawesome-free-6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="/floral_page/img_and_fonts/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" 
     integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" 
     integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Floral_page</title>
-    <link rel="stylesheet" href="/floral/css/floral.css">
+    <link rel="stylesheet" href="/floral_page/css/floral.css">
 </head>
 <body>
     <div class="main">
         <div class="container-fluid header-container">
             <div class="header row">
                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-7 flower-logo">
-                        <img src="/floral/img_and_fonts/image/flower_logo.png" alt="">
+                        <a href="">
+                            <img src="/floral_page/img_and_fonts/image/flower_logo.png" alt="">
+                        </a>
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-7 nav-bar">
                         <ul class="nav-bar-list">
@@ -35,13 +37,13 @@
                     </div>
                     <div class="col-xl-3 col-lg-2 col-md-2 col-sm-8 col-5 d-flex justify-content-end user-icon">
                         <div class="icon-user">
-                            <i class="fa-solid fa-user"></i>
+                           <a href=""><i class="fa-solid fa-user"></i></a>
                         </div>
                         <div class="icon-shopping">
-                            <i class="fa-solid fa-bag-shopping"></i>
+                           <a href=""><i class="fa-solid fa-bag-shopping"></i></a> 
                         </div> 
                         <div class="sidebar-btn js-open-sidebar">
-                            <i class="fa-solid fa-bars"></i>
+                          <a href=""><i class="fa-solid fa-bars"></i></a>  
                         </div>
                     </div>
             </div>
@@ -50,7 +52,7 @@
             <div class="row flower-arrange-banner">
                 <div class="col-left col-lg-6">
                     <div class="decor-leaf-flower">
-                        <img src="/floral/img_and_fonts/image/Leafs2.png" alt="">
+                        <img src="/floral_page/img_and_fonts/image/Leafs2.png" alt="">
                     </div>
                     <div class="text-contain">
                         <h2>Flower <br> Arrangements</h2>
@@ -62,11 +64,11 @@
                         <div class="read-more-flower-arr-btn"> <a href=""> Read More </a></div>
                     </div>
                     <div class="decor-leaf-flower-bottom-left">
-                        <img src="/floral/img_and_fonts/image/Leafs1.png" class="img-fluid" alt="">
+                        <img src="/floral_page/img_and_fonts/image/Leafs1.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col-right col-lg-6">
-                    <img src="/floral/img_and_fonts/image/lady.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/lady.png" alt="">
                 </div>
             </div>
         </div>
@@ -93,21 +95,21 @@
         <div class="our-top-product-content">
             <div class="header-our-top-product">
                 <div class="leaf-product-top-left">
-                    <img src="/floral/img_and_fonts/image/Leaf_product.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/Leaf_product.png" alt="">
                 </div>
                 <div class="heading-our-top-product">
                     <h2>Our Top Products</h2>
                     <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="leaf-product-top-right">
-                    <img src="/floral/img_and_fonts/image/Leaf_product_2.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/Leaf_product_2.png" alt="">
                 </div>
             </div>
             <div class="container slider-container">
                 <div class="row respon-slider">
                     <div class="col-md-12 col-lg-3 flower-slider">
                         <div class="flower-image-slider">
-                            <img src="/floral/img_and_fonts/image/flower_product.png" alt="">
+                            <img src="/floral_page/img_and_fonts/image/flower_product.png" alt="">
                         </div>
                         <div class="intro-text-product">
                             <h3>Lorem impsun</h3>
@@ -119,7 +121,7 @@
                     </div>
                     <div class="col-md-12 col-lg-3 flower-slider">
                         <div class="flower-image-slider">
-                            <img src="/floral/img_and_fonts/image/flower_product_2.png" alt="">                            
+                            <img src="/floral_page/img_and_fonts/image/flower_product_2.png" alt="">                            
                         </div>
                         <div class="intro-text-product">
                             <h3>Lorem impsun</h3>
@@ -131,7 +133,7 @@
                     </div>
                     <div class="col-md-12 col-lg-3 flower-slider">
                         <div class="flower-image-slider">
-                            <img src="/floral/img_and_fonts/image/flower_product_3.png" alt="">                            
+                            <img src="/floral_page/img_and_fonts/image/flower_product_3.png" alt="">                            
                         </div>
                         <div class="intro-text-product">
                             <h3>Lorem impsun</h3>
@@ -143,7 +145,7 @@
                     </div>
                     <div class="col-md-12 col-lg-3 flower-slider">
                         <div class="flower-image-slider">
-                            <img src="/floral/img_and_fonts/image/flower_product_4.png" alt="">
+                            <img src="/floral_page/img_and_fonts/image/flower_product_4.png" alt="">
                         </div>
                         <div class="intro-text-product">
                             <h3>Lorem impsun</h3>
@@ -155,7 +157,7 @@
                     </div>
                     <div class="col-md-12 col-lg-3 flower-slider">
                         <div class="flower-image-slider">
-                            <img src="/floral/img_and_fonts/image/flower_product_4.png" alt="">                          
+                            <img src="/floral_page/img_and_fonts/image/flower_product_4.png" alt="">                          
                         </div>
                         <div class="intro-text-product">
                             <h3>Lorem impsun</h3>
@@ -168,24 +170,24 @@
                 </div>
                 <div class="leaf-decor-product-bottom">
                     <div class="leaf-bottom-left-product">
-                        <img src="/floral/img_and_fonts/image/Leaf_product_3.png" alt="">
+                        <img src="/floral_page/img_and_fonts/image/Leaf_product_3.png" alt="">
                     </div>
                     <div class="leaf-bottom-right-product">
-                        <img src="/floral/img_and_fonts/image/Leaf_product_4.png" alt="">
+                        <img src="/floral_page/img_and_fonts/image/Leaf_product_4.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
         <div class="how-we-do-it-content">
-            <div class="leaf-left-how-we-do-it"><img src="/floral/img_and_fonts/image/leaf_how_we_do_it_1.png" alt=""></div>
+            <div class="leaf-left-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_1.png" alt=""></div>
             <h2>How We Do it</h2>
             <h4>Lorem ipsum dolor sit amet, consectetur</h4>
                 <div class="video-how-we-do-it">
                     <div class="box-brown-decor-top-how-we-do-it"></div>
-                    <video src="/floral/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>  
+                    <video src="/floral_page/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>  
                     <div class="box-decor-bottom-how-we-do-it"></div>            
                 </div>
-                <div class="left-right-how-we-do-it"><img src="/floral/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
+                <div class="left-right-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
         </div>
             <div class="row special-sale-off">
                 <div class="col-lg-6 col-md-12 col-sm-12 offer-col-left">
@@ -194,19 +196,19 @@
                     <h3>Discount on your <br> first purchase</h3>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 image-offer-col-right container-fluid">
-                    <img src="/floral/img_and_fonts/image/image_special_offer.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/image_special_offer.png" alt="">
                 </div>
             </div>
         <div class="row intro-product-best-flower">
             <div class="image-best-flower-col-left col-lg-7 col-md-7">
                 <div class="box-pink-top-best-flower"></div>
-                <img src="/floral/img_and_fonts/image/flower_best_flower.png" alt="">
+                <img src="/floral_page/img_and_fonts/image/flower_best_flower.png" alt="">
                 <div class="box-brown-bottom-best-flower"></div>
             </div>
             <div class="heading-best-flower-col-right col-lg-5 col-md-5">
                 <div class="text-best-flower">
                     <div class="image-leaf-best-flower">
-                        <img src="/floral/img_and_fonts/image/leaf_best_flower.png" alt="">
+                        <img src="/floral_page/img_and_fonts/image/leaf_best_flower.png" alt="">
                     </div>
                     <h2>We select the best flowers</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
@@ -216,14 +218,14 @@
                 </div>
             </div>
             <div class="leaf-decor-best-flower-bottom">
-                <img src="/floral/img_and_fonts/image/leaf_best_flower_2.png" alt="">
+                <img src="/floral_page/img_and_fonts/image/leaf_best_flower_2.png" alt="">
             </div>
         </div>
         <div class="row intro-take-care-details">
             <div class="heading-take-care-detail col-lg-6 col-md-6">
                 <div class="text-take-care-detail">
                     <div class="image-leaf-best-flower">
-                        <img src="/floral/img_and_fonts/image/leaf_best_flower.png" alt="">
+                        <img src="/floral_page/img_and_fonts/image/leaf_best_flower.png" alt="">
                     </div>
                     <div class="container-text-takecare-detail">
                         <h2>We take care of the details</h2>
@@ -236,22 +238,22 @@
             </div>
             <div class="image-take-care-detail col-lg-6 col-md-6">
                 <div class="container-image-take-care-detail">
-                    <img src="/floral/img_and_fonts/image/take_care_details.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/take_care_details.png" alt="">
                 </div>
             </div>
             <div class="leaf-right-bottom-take-care-detail">
-                <img src="/floral/img_and_fonts/image/leaf_right_bottom_take_care_detail.png" alt="">
+                <img src="/floral_page/img_and_fonts/image/leaf_right_bottom_take_care_detail.png" alt="">
             </div>
         </div>
         <div class="row intro-love-what-we-do">
             <div class="image-love-what-we-do col-lg-7 col-md-7">
                 <div class="box-pink-love-what-we-do-top"></div>
-                <img src="/floral/img_and_fonts/image/love_what_we_do.png" alt="">
+                <img src="/floral_page/img_and_fonts/image/love_what_we_do.png" alt="">
                 <div class="box-brown-love-what-we-do-bottom"></div>
             </div>
             <div class="heading-love-what-we-do col-lg-5 col-md-5">
                 <div class="leaf-image-love-what-we-do">
-                    <img src="/floral/img_and_fonts/image/leaf_love_what_we_do.png" alt="">
+                    <img src="/floral_page/img_and_fonts/image/leaf_love_what_we_do.png" alt="">
                 </div>
                 <div class="container-text-love-what-we-do">
                     <div class="text-contain-love-what-we-do">
@@ -263,7 +265,7 @@
                     </div>
                 </div>
             </div>
-            <div class="leaf-decor-bottom-love-what-we-do"><img src="/floral/img_and_fonts/image/leaf_best_flower_2.png" alt=""></div>
+            <div class="leaf-decor-bottom-love-what-we-do"><img src="/floral_page/img_and_fonts/image/leaf_best_flower_2.png" alt=""></div>
         </div>
         <div class="form-subcribe">
             <div class="container-heading-form-subcribe">
@@ -313,6 +315,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/floral.js"></script>
+    <script src="/floral_page/js/floral.js"></script>
 </body>
 </html>
