Tạo khung cho img ,set height cứng theo màn, tạo count up sau khi reload trang

--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowers Store</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <link type="image/png" sizes="32x32" rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="/assets/css/all.min.css">
@@ -68,7 +68,9 @@
                     
                 </div>
                 <div class="col-md-6 box_banner">
-                    <img class="img_banner" src="/assets/img/banner_img.png" alt="">
+                    <div class="banner_photo">
+                        <img class="img_banner" src="/assets/img/banner_img.png" alt="">
+                    </div>
                 </div>
             </div>
 
@@ -76,19 +78,19 @@
                 <div class="container text-center">
                     <div class="row no-gutters">
                         <div class="col-md-3 small_box_achive">
-                            <p class="achive_count">3000+</p>
+                            <p class="achive_count" data-stop="3000">3000+</p>
                             <p class="achive_name">Package Sold</p>
                         </div>
                         <div class="col-md-3 small_box_achive">
-                            <p class="achive_count">5000+</p>
+                            <p class="achive_count" data-stop="5000">5000+</p>
                             <p class="achive_name">Bouquet Sold</p>
                         </div>
                         <div class="col-md-3 small_box_achive">
-                            <p class="achive_count">7000+</p>
+                            <p class="achive_count" data-stop="7000">7000+</p>
                             <p class="achive_name">Happy Clients</p>
                         </div>
                         <div class="col-md-3 small_box_achive">
-                            <p class="achive_count">10+</p>
+                            <p class="achive_count" data-stop="10">10+</p>
                             <p class="achive_name">Year of Experience</p>
                         </div>
                     </div>
@@ -114,6 +116,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -128,6 +132,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -142,6 +148,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -156,6 +164,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd4.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -174,6 +184,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -187,6 +199,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -200,6 +214,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -213,6 +229,8 @@
                                     <div class="smallbox_product">
                                         <div class="product_img">
                                             <img class="product_pic" src="/assets/img/prd4.png" alt="">
+                                        </div>
+                                        <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
                                         </div>
                                         <div class="detail_product">
@@ -245,6 +263,8 @@
                             <div class="smallbox_product">
                                 <div class="product_img">
                                     <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                </div>
+                                <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
                                 </div>
                                 <div class="detail_product">
@@ -258,6 +278,8 @@
                             <div class="smallbox_product">
                                 <div class="product_img">
                                     <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                </div>
+                                <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
                                 </div>
                                 <div class="detail_product">
@@ -271,6 +293,8 @@
                             <div class="smallbox_product">
                                 <div class="product_img">
                                     <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                </div>
+                                <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
                                 </div>
                                 <div class="detail_product">
