--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowers Store</title>
-    <link type="image/png" sizes="32x32" rel="icon" href="/assets/img/favicon.png">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/index.css">
-    <link rel="stylesheet" href="/assets/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/animate.css">    
+    <link type="image/png" sizes="32x32" rel="icon" href="./assets/img/favicon.png">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/animate.css">    
 </head>
 <body>
     <header>
@@ -17,10 +17,10 @@
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-md">
                     <a class="navbar-brand" href="">
-                        <img class="nav_pic" src="/assets/img/logo.png" alt="">
+                        <img class="nav_pic" src="./assets/img/logo.png" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><img src="/assets/img/menu.png" alt=""></span>
+                        <span class="navbar-toggler-icon"><img src="./assets/img/menu.png" alt=""></span>
                     </button>
                     <div class="box_collapse collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav mx-auto">
@@ -32,13 +32,13 @@
                         </div>
                         <div class="box_session navbar-text">
                             <a href="">
-                                <img src="/assets/img/session.png" alt="">
+                                <img src="./assets/img/session.png" alt="">
                             </a>
                             <a href="">
-                                <img src="/assets/img/cart.png" alt="">
+                                <img src="./assets/img/cart.png" alt="">
                             </a>
                             <a href="" class="menu_mobi">
-                                <img src="/assets/img/menu.png" alt="">
+                                <img src="./assets/img/menu.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-md-6 box_banner">
                     <div class="banner_photo">
-                        <img class="img_banner" src="/assets/img/banner_img.png" alt="">
+                        <img class="img_banner" src="./assets/img/banner_img.png" alt="">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                                 <div class="col-md-3"> 
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd1.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -131,7 +131,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd2.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -147,7 +147,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd3.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -163,7 +163,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd4.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd4.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -183,7 +183,7 @@
                                 <div class="col-md-3"> 
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd1.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -198,7 +198,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd2.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -213,7 +213,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd3.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -228,7 +228,7 @@
                                 <div class="col-md-3">
                                     <div class="smallbox_product">
                                         <div class="product_img">
-                                            <img class="product_pic" src="/assets/img/prd4.png" alt="">
+                                            <img class="product_pic" src="./assets/img/prd4.png" alt="">
                                         </div>
                                         <div class="like_product">
                                             <i class="far fa-heart love_icon"></i>
@@ -262,7 +262,7 @@
                         <div class="carousel-item active">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="/assets/img/prd1.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd1.png" alt="">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -277,7 +277,7 @@
                         <div class="carousel-item">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="/assets/img/prd2.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd2.png" alt="">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -292,7 +292,7 @@
                         <div class="carousel-item">
                             <div class="smallbox_product">
                                 <div class="product_img">
-                                    <img class="product_pic" src="/assets/img/prd3.png" alt="">
+                                    <img class="product_pic" src="./assets/img/prd3.png" alt="">
                                 </div>
                                 <div class="like_product">
                                     <i class="far fa-heart love_icon"></i>
@@ -330,8 +330,8 @@
                 <div class="box_video_aboutus text-center">
 
                     <video class="aboutus_pic" poster="/assets/img/video_demo.png">
-                        <source src="/assets/video/Embellishments.mp4" type="video/mp4">
-                        <source src="/assets/video/Embellishments.webm" onerror="fallback(parentNode)">
+                        <source src="./assets/video/Embellishments.mp4" type="video/mp4">
+                        <source src="./assets/video/Embellishments.webm" onerror="fallback(parentNode)">
                     </video>
 
                     <i class="far fa-play-circle"></i>
@@ -350,14 +350,14 @@
                                 <p class="offer_text">Discount on your first purchase</p>
                             </div>
                             <div class="box_leaf">
-                                <img src="/assets/img/left_left.png" alt="">
-                                <img src="/assets/img/left_right.png" alt="">
+                                <img src="./assets/img/left_left.png" alt="">
+                                <img src="./assets/img/left_right.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 offer_detail">
                         <div class="offer_photo">
-                            <img class="offer_pic" src="/assets/img/offer_img.png" alt="">
+                            <img class="offer_pic" src="./assets/img/offer_img.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -374,12 +374,12 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="/assets/img/blog1.png" alt="">
+                                    <img src="./assets/img/blog1.png" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="content_blog wow slideInRight">
-                                    <img src="/assets/img/leaf_blog.png" alt="" class="content_pic">
+                                    <img src="./assets/img/leaf_blog.png" alt="" class="content_pic">
                                     <h1 class="content_blog_title">We select the best flowers</h1>
                                     <p class="content_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur aliquam impedit accusantium delectus obcaecati dolores ut accusamus libero.</p>
                                     <a href="" class="btn read_more">Read More</a>
@@ -394,12 +394,12 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="/assets/img/blog2.png" alt="">
+                                    <img src="./assets/img/blog2.png" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="content_blog wow slideInRight">
-                                    <img src="/assets/img/leaf_blog.png" alt="" class="content_pic">
+                                    <img src="./assets/img/leaf_blog.png" alt="" class="content_pic">
                                     <h1 class="content_blog_title">We take care the details</h1>
                                     <p class="content_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum est repudiandae autem impedit rerum dolorum quam dolorem sunt?</p>
                                     <a href="" class="btn read_more">Read More</a>
@@ -414,12 +414,12 @@
                         <div class="row no-gutters">
                             <div class="col-md-6">
                                 <div class="feature_img wow slideInLeft">
-                                    <img src="/assets/img/blog3.png" alt="">
+                                    <img src="./assets/img/blog3.png" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="content_blog wow slideInRight">
-                                    <img src="/assets/img/leaf_blog.png" alt="" class="content_pic">
+                                    <img src="./assets/img/leaf_blog.png" alt="" class="content_pic">
                                     <h1 class="content_blog_title">We love what we do</h1>
                                     <p class="content_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, doloremque maiores possimus deserunt eius sint cum iure velit!</p>
                                     <a href="" class="btn read_more">Read More</a>
@@ -539,9 +539,9 @@
 
 
 
-    <script src="/assets/js/jquery-3.6.0.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/wow.js"></script>
-    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/wow.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
