--- a/floral_page/html/floral.html
+++ b/floral_page/html/floral.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/floral_page/css/floral.css">
 </head>
 <body>
+    
     <div class="main">
         <div class="container-fluid header-container">
             <div class="header row">
@@ -43,7 +44,7 @@
                            <a href=""><i class="fa-solid fa-bag-shopping"></i></a> 
                         </div> 
                         <div class="sidebar-btn js-open-sidebar">
-                          <a href=""><i class="fa-solid fa-bars"></i></a>  
+                           <i class="fa-solid fa-bars"></i>
                         </div>
                     </div>
             </div>
@@ -64,7 +65,7 @@
                         <div class="read-more-flower-arr-btn"> <a href=""> Read More </a></div>
                     </div>
                     <div class="decor-leaf-flower-bottom-left">
-                        <img src="/floral_page/img_and_fonts/image/Leafs1.png" class="img-fluid" alt="">
+                        <img src="/floral_page/img_and_fonts/image/Leafs1.png" alt="">
                     </div>
                 </div>
                 <div class="col-right col-lg-6">
@@ -183,9 +184,9 @@
             <h2>How We Do it</h2>
             <h4>Lorem ipsum dolor sit amet, consectetur</h4>
                 <div class="video-how-we-do-it">
-                    <div class="box-brown-decor-top-how-we-do-it"></div>
-                    <video src="/floral_page/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>  
-                    <div class="box-decor-bottom-how-we-do-it"></div>            
+                    <div class="container-video-how-we-do-it">
+                        <video src="/floral_page/img_and_fonts/image/Asymmetric flower arrangement.mp4" controls></video>             
+                    </div>
                 </div>
                 <div class="left-right-how-we-do-it"><img src="/floral_page/img_and_fonts/image/leaf_how_we_do_it_2.png" alt=""></div>
         </div>
@@ -201,9 +202,9 @@
             </div>
         <div class="row intro-product-best-flower">
             <div class="image-best-flower-col-left col-lg-7 col-md-7">
-                <div class="box-pink-top-best-flower"></div>
-                <img src="/floral_page/img_and_fonts/image/flower_best_flower.png" alt="">
-                <div class="box-brown-bottom-best-flower"></div>
+                <div class="container-image-best-flower">
+                    <img src="/floral_page/img_and_fonts/image/flower_best_flower.png" alt="">
+                </div>
             </div>
             <div class="heading-best-flower-col-right col-lg-5 col-md-5">
                 <div class="text-best-flower">
@@ -247,9 +248,9 @@
         </div>
         <div class="row intro-love-what-we-do">
             <div class="image-love-what-we-do col-lg-7 col-md-7">
-                <div class="box-pink-love-what-we-do-top"></div>
-                <img src="/floral_page/img_and_fonts/image/love_what_we_do.png" alt="">
-                <div class="box-brown-love-what-we-do-bottom"></div>
+                <div class="container-image-love-what-we-do">
+                    <img src="/floral_page/img_and_fonts/image/love_what_we_do.png" alt="">
+                </div>
             </div>
             <div class="heading-love-what-we-do col-lg-5 col-md-5">
                 <div class="leaf-image-love-what-we-do">
