Fix css : font chữ, cỡ chữ

--- a/flower-store/index.html
+++ b/flower-store/index.html
@@ -37,9 +37,6 @@
                             <a href="">
                                 <img src="../assets/img/cart.png" alt="">
                             </a>
-                            <a href="" class="menu_mobi">
-                                <img src="../assets/img/menu.png" alt="">
-                            </a>
                         </div>
                     </div>
                 </nav>
@@ -75,7 +72,7 @@
             </div>
 
             <div class="box_achievement">
-                <div class="container text-center">
+                <div class="container-fluid text-center">
                     <div class="row no-gutters">
                         <div class="col-md-3 small_box_achive">
                             <p class="achive_count" data-stop="3000">3000+</p>
@@ -332,7 +329,6 @@
     
                         <video class="aboutus_pic" poster="/assets/img/video_demo.png">
                             <source src="../assets/video/Embellishments.mp4" type="video/mp4">
-                            <source src="../assets/video/Embellishments.webm" onerror="fallback(parentNode)">
                         </video>
     
                         <i class="far fa-play-circle"></i>
@@ -520,7 +516,7 @@
                                 <p class="info_footer_text">Jakarta, City 1234</p>
                             </a>
                             <a href="mailto:www.yourflowerste.com">
-                                <p class="info_footer_text">www.yourflowerste.com</p>
+                                <p class="info_footer_text">www.yourflowersite.com</p>
                             </a>
                         </div>
                     </div>
